# src/config/apidocs.json
@@ -566,6 +566,24 @@
                         "description": "EX: date_time=2024-01-06, USING UTC ONLY"
                     },
                     {
+                        "name": "from_date_time",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "2024-01-06 12:07:16.715 +0000",
+                        "description": "EX: from_date_time=2024-01-06 12:07:16.715 +0000, USING UTC ONLY"
+                    },
+                    {
+                        "name": "to_date_time",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "2024-01-06 12:07:16.715 +0000",
+                        "description": "EX: to_date_time=2024-01-06 12:07:16.715 +0000, USING UTC ONLY"
+                    },
+                    {
                         "name": "sort_doctor_id",
                         "in": "query",
                         "schema": {
